fix: fixed text alignment for center middle

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -509,20 +509,18 @@ aside li {
   bottom: 0;
 }
 
+.floatingCenterMiddle {
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
+}
+
 .floatingCenter {
   left: 50%;
   transform: translateX(-50%);
 }
 
-.floatingCenter .floatingMiddle {
-  transform: translateX(-50%) translateY(-50%);
-}
-
 .floatingMiddle {
   top: 50%;
   transform: translateY(-50%);
-}
-
-.floatingMiddle .floatingCenter {
-  transform: translateX(-50%) translateY(-50%);
 }
